web/static/mailgraph.css
* {
	margin: 0;
	padding: 0
}

body {
	width: 1000px;
	max-width: calc(100% - 20px);
	background-color: white;
	font-family: sans-serif;
	font-size: 12pt;
	margin: 5px auto;
	padding: 0 10px;
}

h1 {
	margin-top: 20px;
	margin-bottom: 30px;
	text-align: center
}

h2 {
	background-color: #ddd;
	padding: 2px 0 2px 4px
}

hr {
	height: 1px;
	border: 0;
	border-top: 1px solid #aaa
}

table {
	border: 0px;
	width: 100%
}

img {
	border: 0
}

a {
	text-decoration: none;
	color: #00e
}

a:hover {
	text-decoration: underline;
}

#jump a.active {
	font-weight: bold;
	text-decoration: underline;
}

#jump {
	margin: 0 0 10px;
	text-align: center;
}

#jump li {
	list-style: none;
	display: inline;
	font-size: 90%;
}

#jump li:after {
	content: "|";
}

#jump li:last-child:after {
	content: "";
}

.charts {
	margin: 0 0 12px;
}

iframe.chart {
	width: 920px;
	max-width: 100%;
	height: 250px;
	border: 0;
	display: block;
	margin: 0 auto 4px;
	overflow: hidden;
}

